# purescript-corefn

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  devenv.nix  purescript-corefn.cabal
src/Language/PureScript/: Comments.hs  CoreFn.hs  Names.hs  PSString.hs
src/Language/PureScript/CoreFn/: Comment.hs  Expr.hs  FromJSON.hs  Ident.hs  Laziness.hs  Meta.hs  Module.hs  ModuleName.hs  Name.hs  ProperName.hs  Qualified.hs  Reader.hs  SourcePos.hs  Traversals.hs
